syntax = "proto3";

package onight.zjfae.afront.gensazj;
option java_outer_classname="Advertise";

//Generated By BrewRobot:Wed Sep 06 14:53:46 CST 2017

message PBAPP_advertise{
	//
	message Ads{
		string uuid = 1;	 //,uuid,Long,不校验,是,
		string funcIcons = 2;	 //,图标,String,不校验,是,
		string aniMethod = 3;	 //,方法,String,不校验,是,
		string aniParams = 4;	 //,参数,Long,不校验,是,
		string funcUrl = 5;	 //,地址,Long,不校验,是,
		string platforms = 6;	 //,平台,Long,不校验,是,
		string appVers = 7;	 //,APP版本号,String,不校验,是,
		string showType = 8;	 //,显示类型,String,不校验,是,
		string intervalMin = 9;	 //,间隔时间,Long,不校验,是,
		string ctrlIparam = 10;	 //,控制参数,Long,不校验,是,
		string ctrlStrparam = 11;	 //,控制字符参数,Long,不校验,是,
		string inserttime = 12;	 //,插入时间,Long,不校验,是,
		string status = 13;	 //,状态,Long,不校验,是,
		string isShare = 14;	 //,是否分享,Long,不校验,是,
		string shareTitle = 15; //,分享标题
		string shareContent = 16; //,分享内容
		string shareItem = 17; //,分享选项 0-链接,1-图片,2-图片二维码
		string sharePicUrl = 18 ;//,分享图片地址
		string shareUrl = 19 ;//,分享链接地址
		string iconsWeights = 20;	 //,图标权重,String,不校验,是,
	}


	string showType = 1; //,显示类型,String,不校验,是,

	string resTime = 2; //,返回时间,String,不校验,是,

	repeated Ads ads = 3;

	string upgradeDate = 4;//当天日期

	string isUpgrade = 5;//本月是否升级: 1 - 当月有升级,0 - 当月无升级

}

message Ret_PBAPP_advertise{
	//

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBAPP_advertise data=3;


}

message REQ_PBAPP_advertise{
	//

	string show_type = 1; //,显示类型(0:启动页广告，1:首页显示广告，2:登录时候显示),String,不校验,否,


}