syntax = "proto3";

package onight.zjfae.afront.gens;
option java_package="onight.zjfae.afront.gensazj";
option java_outer_classname="UserRecommendInfoPB";
//Generated By BrewRobot:Fri Jul 07 16:24:00 CST 2017

message PBIFE_friendsrecommend_userRecommendInfo{
	///ife/friendsrecommend/userRecommendInfo.html

	string mobile = 1; //,手机号,String,不校验,是,

	string registNum = 2; //,注册奖励,String,不校验,是,

	string bindCardNum = 3; //,绑定奖励,String,不校验,是,

	string investNum = 4; //,投资奖励,String,不校验,是,

	string account = 5; //,帐号,String,不校验,是,

	string fundAccount = 6; //,资金帐号,String,不校验,是,

	string info1 = 7; //,信息1,String,不校验,是,

	string info2 = 8; //,信息2,String,不校验,是,


}

message Ret_PBIFE_friendsrecommend_userRecommendInfo{
	///ife/friendsrecommend/userRecommendInfo.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_friendsrecommend_userRecommendInfo data=3;


}

message REQ_PBIFE_friendsrecommend_userRecommendInfo{
	///ife/friendsrecommend/userRecommendInfo.html

	string startDate = 1; //,开始日期,String,不校验,否,

	string endDate = 2; //,结束日期,String,不校验,否,


}